# mail-notify

./: Cargo.toml  README.md
configs/: .gitignore  example_env.sh
src/: config.rs  connection.rs  handler.rs  main.rs
