[package]
name = "mail-notify"
version = "0.1.0"
authors = ["Dennis Ogbe <do@ogbe.net>"]
edition = "2018"

[dependencies]
imap = "2.3.0"
mailparse = "0.13.0"
native-tls = "0.2.4"
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
walkdir = "2.3.1"
notify-rust = "4.0.0"
shellexpand = "2.0.0"
sysinfo = "0.15.1"
rust-embed = "5.6.0"
rodio = "0.11.0"
dbus = "0.8.4"